--- a/configs/gungame.cfg
+++ b/configs/gungame.cfg
@@ -49,6 +49,7 @@ gg_warmup_multi 0
 gg_extra_nades 1
 gg_nade_refresh 5.0
 gg_kills_per_lvl 2
+gg_points_per_kill 1
 gg_ammo_amount 200
 gg_refill_on_kill 1
 gg_tk_penalty 1
